--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -9,8 +9,7 @@ const personalImageAlt = "Miguel Ángel";
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Willin Alonzo pero mis amigos me llaman Will. Empecé en la
-      programación con un CRM, tenía 25 años. Actualmente estoy <strong
+      Me llamo Willian Alonzo pero mis amigos me llaman Will. Empecé el desarrollo Frontned, con el desarrollo de un CRM, tenía 25 años. Actualmente estoy <strong
         >desarrollando aplicaciones web y móviles para empresas multinacionales</strong
       >.
     </p>
