--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const navItems = [
   {
     title: "Contacto",
     label: "contacto",
-    url: "williamalonzo4519@gmail.com",
+    url: "mailto:williamalonzo4519@gmail.com",
   },
 ];
 ---
