--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,6 +4,7 @@ import Badge from "@/components/Badge.astro";
 import LinkedInIcon from "@/components/icons/LinkedIn.astro";
 import MailIcon from "@/components/icons/Mail.astro";
 import SocialPill from "@/components/SocialPill.astro";
+import GitHub from "./icons/GitHub.astro";
 ---
 
 <div class="max-w-xl">
@@ -41,6 +42,10 @@ import SocialPill from "@/components/SocialPill.astro";
     <SocialPill href="https://www.linkedin.com/in/willian-alonzo-952288173/">
       <LinkedInIcon class="size-4" />
       LinkedIn
+    </SocialPill>
+    <SocialPill href="https://github.com/wralonzo">
+      <GitHub class="size-4" />
+      GitHubIcon
     </SocialPill>
   </nav>
 </div>
