Solved: incorrect names

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import GitHub from "./icons/GitHub.astro";
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/me.png"
+      src="https://media.licdn.com/dms/image/D5603AQF8l37lD4Xtvg/profile-displayphoto-shrink_100_100/0/1702144295717?e=1724284800&v=beta&t=2Bs3bQyu3WCb-WLTQmwA9i0vmdgbh3Gcxe-WsBxp0hI"
       alt={personalImageAlt}
     />
     <a
@@ -45,7 +45,7 @@ import GitHub from "./icons/GitHub.astro";
     </SocialPill>
     <SocialPill href="https://github.com/wralonzo">
       <GitHub class="size-4" />
-      GitHubIcon
+      GitHub
     </SocialPill>
   </nav>
 </div>
