Se agrego fotografia

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-const personalImageAlt = "Miguel Ángel";
+const personalImageAlt = "Willian Alonzo";
 import Badge from "@/components/Badge.astro";
 import LinkedInIcon from "@/components/icons/LinkedIn.astro";
 import MailIcon from "@/components/icons/Mail.astro";
@@ -7,11 +7,11 @@ import SocialPill from "@/components/SocialPill.astro";
 import GitHub from "./icons/GitHub.astro";
 ---
 
-<div class="max-w-xl">
-  <div class="flex gap-4 mb-4">
+<div class="">
+  <div class="flex gap-12 mb-12">
     <img
       class="rounded-full shadow-lg size-16"
-      src="https://media.licdn.com/dms/image/D5603AQF8l37lD4Xtvg/profile-displayphoto-shrink_100_100/0/1702144295717?e=1724284800&v=beta&t=2Bs3bQyu3WCb-WLTQmwA9i0vmdgbh3Gcxe-WsBxp0hI"
+      src="https://media.licdn.com/dms/image/v2/D5603AQF8l37lD4Xtvg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1702144295717?e=1756339200&v=beta&t=xXVytT266PZPsMj1525cR3tKCNLUCm2r8iZCX0rEjTI"
       alt={personalImageAlt}
     />
     <a
@@ -29,10 +29,14 @@ import GitHub from "./icons/GitHub.astro";
     Hola! Soy Willian Alonzo
   </h1>
   <p
-    class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+    class="text-justify mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    +3 años de experiencia. <strong>Analista desarrollador</strong> de Guatemala,
-    🇬🇹. Especializado en el desarrollo de backend y frontend.
+    Con más de 3 años de experiencia como
+    <strong>Analista Desarrollador</strong> en Guatemala 🇬🇹, me especializo en la creación tanto del backend como del frontend con pasión y precisión. Mi objetivo
+    es transformar ideas en soluciones tecnológicas innovadoras y eficientes que
+    impulsen el éxito de los proyectos. Estoy comprometido con la excelencia técnica
+    y el diseño de experiencias de usuario excepcionales. ¡Trabajemos juntos para
+    hacer realidad tus visiones tecnológicas! +3 años de experiencia.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:williamalonzo4519@gmail.com">
