--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,5 +1,5 @@
 ---
-const personalImageAlt = "Miguel Ángel";
+const personalImageAlt = "Willian Alonzo";
 ---
 
 <article
@@ -34,7 +34,7 @@ const personalImageAlt = "Miguel Ángel";
   <img
     width="200"
     height="200"
-    src="https://media.licdn.com/dms/image/D5603AQF8l37lD4Xtvg/profile-displayphoto-shrink_100_100/0/1702144295717?e=1724284800&v=beta&t=2Bs3bQyu3WCb-WLTQmwA9i0vmdgbh3Gcxe-WsBxp0hI"
+    src="https://media.licdn.com/dms/image/v2/D5603AQF8l37lD4Xtvg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1702144295717?e=1756339200&v=beta&t=xXVytT266PZPsMj1525cR3tKCNLUCm2r8iZCX0rEjTI"
     alt={personalImageAlt}
     class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
     style="object-position: 50% 50%"
