--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -20,7 +20,7 @@ const TAGS = {
 const PROJECTS = [
   {
     title: "Ingenieria en sistemas",
-    description: "Universidad Mariano Gálvez de guatemal",
+    description: "Universidad Mariano Gálvez de Guatemala, Guatemala",
     link: "https://umg.edu.gt/ingenieria/sistemas",
     image:
       "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMeEAv4RI3ZdVY7IW4PwNrwAOOrfKtB5ZD7w&s",
@@ -35,7 +35,7 @@ const PROJECTS = [
   },
   {
     title: "UDEMY",
-    description: "TypeScript sin fronteras: guía definitiva",
+    description: "TypeScript sin fronteras: guía definitiva, Prototypes",
     link: "https://www.udemy.com/certificate/UC-10f33e29-9a5c-4c1a-9f71-8ce9d0b63a58/",
     image:
       "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9tXhhNXbzL8KBeDoyMfLww-edaY1H0deWqw&s",
@@ -51,14 +51,14 @@ const PROJECTS = [
   },
   {
     title: "UDEMY",
-    description: "Nest: Desarrollo backend escalable con Node",
+    description: "Nest: Desarrollo backend escalable con Node, redis, postgres",
     link: "https://www.udemy.com/certificate/UC-b77b6577-35bc-492f-8959-b8af467a002f/",
     image: "https://miro.medium.com/v2/resize:fit:1040/0*zRv5TkRmhAyLnG-t.png",
     tags: [],
   },
   {
     title: "UDEMY",
-    description: "Flutter: Una introducción al SDK de Google",
+    description: "Flutter: Una introducción al SDK de Google, (dart)",
     link: "https://www.udemy.com/certificate/UC-317dda12-ea31-4f02-9d92-f70e2ab2f500/?utm_medium=email&utm_campaign=email&utm_source=sendgrid.com",
     image:
       "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCQdTuz5Nhz4jIoJadKkX1ZfnaT4gnqgjuTg&s",
@@ -69,7 +69,7 @@ const PROJECTS = [
 
 <div class="flex flex-col gap-y-16">
   {
-    PROJECTS.map(({ image, title, description, tags, link, github }) => (
+    PROJECTS.map(({ image, title, description, tags, link }) => (
       <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
         <div class="w-full md:w-1/3">
           <div>
@@ -89,7 +89,7 @@ const PROJECTS = [
           </h3>
           <div class="flex flex-wrap mt-2">
             <ul class="flex flex-row mb-2 gap-x-2">
-              {tags.map((tag) => (
+              {tags.map((tag: any) => (
                 <li>
                   <span
                     class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}
@@ -105,12 +105,6 @@ const PROJECTS = [
               {description}
             </div>
             <footer class="flex items-end justify-start mt-4 gap-x-4">
-              {github && (
-                <LinkButton href={github}>
-                  <GitHub class="size-6" />
-                  Code
-                </LinkButton>
-              )}
               {link && (
                 <LinkButton href={link}>
                   <Link class="size-4" />
