--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,12 +3,12 @@ import ExperienceItem from "./ExperienceItem.astro";
 const EXPERIENCIE = [
   {
     date: "Actualmente...",
-    title: "Analista Desarrollador",
+    title: "Analista Desarrollador Middle",
     company: "Business Development Group, S.A",
     tools:
-      "TypeScript, JavaScript, nodesJs, Express, NestJs, ReactJs, ReactNative, Flutter, Ionic, Angular, MySql, Postgres, Oracle Db, MongoDb, Aws, Digital Ocean, Git, Gitlab, Google WorkSpace",
+      "TypeScript, JavaScript, NodesJs, Express, NestJs, ReactJs, ReactNative, Flutter, Ionic, Angular, MySql, Postgres, Oracle Db, MongoDb, AWS, Digital Ocean, Git, Gitlab, Google WorkSpace, Slack, Jira, Scrum, Azure, OneSignal, Facephi, Kotlin, TypeScript, Python entre otros",
     description:
-      "Responsable de la plataforma CRM, ERP, crear componentes y utilidades para actualizaciones de las aplicaciones web. Mejora de un 30% en la entrega de software.",
+      "Responsable de la plataformas, Mobiles, Apis Rest, CRM, ERP, crear componentes y utilidades para actualizaciones de las aplicaciones (web y mobiles) para la banca y gestión logística. Mejorando de un 50% en la entrega de software. Considerando aspectos diferenciadores como la calida, escalabilidad y rendiminento ",
     link: "https://www.bdgsa.net",
   },
   {
