--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,9 +6,9 @@ const EXPERIENCIE = [
     title: "Analista Desarrollador Middle",
     company: "Business Development Group, S.A",
     tools:
-      "TypeScript, JavaScript, NodesJs, Express, NestJs, ReactJs, ReactNative, Flutter, Ionic, Angular, MySql, Postgres, Oracle Db, MongoDb, AWS, Digital Ocean, Git, Gitlab, Google WorkSpace, Slack, Jira, Scrum, Azure, OneSignal, Facephi, Kotlin, TypeScript, Python entre otros",
+      "TypeScript, JavaScript, Node.js, Express, NestJS, ReactJS, React Native, Flutter, Ionic, Angular, MySQL, PostgreSQL, Oracle DB, MongoDB, AWS, Digital Ocean, Git, GitLab, Google Workspace, Slack, Jira, Scrum, Azure, OneSignal, FacePhi, SmartID, WebSocket, GraphQL, Docker, JWT, cifrado AES con IV, Python, Kotlin",
     description:
-      "Responsable de la plataformas, Mobiles, Apis Rest, CRM, ERP, crear componentes y utilidades para actualizaciones de las aplicaciones (web y mobiles) para la banca y gestión logística. Mejorando de un 50% en la entrega de software. Considerando aspectos diferenciadores como la calida, escalabilidad y rendiminento ",
+      "Responsable del desarrollo de plataformas móviles, APIs REST, CRM y ERP para clientes del sector bancario y logístico, impactando a más de 4 millones de usuarios. Implementé soluciones escalables y seguras usando tecnologías modernas como NestJS, Flutter, FacePhi (biometría), cifrado con IV, WebSockets y GraphQL. Logré mejorar en un 50% los tiempos de entrega de software, priorizando la calidad, rendimiento y escalabilidad.",
     link: "https://www.bdgsa.net",
   },
   {
@@ -16,18 +16,18 @@ const EXPERIENCIE = [
     title: "Desarrollador JR",
     company: "Informática Guatemala",
     tools:
-      "PHP, JavaScript, CodeIgniter, MySql, Vps Git, Gitlab, Google WorkSpace",
+      "PHP, JavaScript, CodeIgniter, MySQL, VPS, Git, GitLab, Google Workspace",
     description:
-      "Responsable de la plataforma CRM, ERP, crear componentes y utilidades para actualizaciones de las aplicaciones web. Mejora de un 30% en la entrega de software.",
+      "Encargado del desarrollo y mantenimiento de plataformas CRM y ERP basadas en PHP y CodeIgniter. Optimicé procesos internos mediante la creación de nuevos componentes reutilizables, logrando una mejora del 30% en la entrega de funcionalidades. Trabajé en entornos colaborativos utilizando control de versiones y herramientas de gestión de proyectos.",
     link: "https://www.informatica.com.gt",
   },
   {
     date: "Marzo 2021",
-    title: "Desarrollo app mobile (Android & IOS)",
+    title: "Desarrollador de App Móvil (Android & iOS)",
     company: "Somos Progreso",
-    tools: "Flutter, Dart, ApiRest, Sqlite, Notifications, Packages.",
+    tools: "Flutter, Dart, API REST, SQLite, Notificaciones push, QR Scanner",
     description:
-      "Desarrollo de app mobile para el control de marcaciones GPS, scanner de codigos QR, recepcion de notificaciones. Se desarrollo en FLUTTER como tecnología principal, consumimiento api rest para la persistencia de la información.",
+      "Desarrollé desde cero una aplicación móvil multiplataforma en Flutter para el registro de marcaciones GPS, escaneo de códigos QR y recepción de notificaciones. Se integró con una API REST para la persistencia de datos y un sistema local con SQLite. La app fue publicada en Play Store y facilitó el control de asistencia y ubicación de colaboradores en campo.",
     link: "https://play.google.com/store/apps/details?id=com.mc.cemprog&hl=es_BO&pli=1",
   },
 ];
